[package]
name = "async01"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.21", features = ["full"] }
reqwest = "0.10.6"
tiny_http = "0.12.0"
log = "0.4.17"
pretty_env_logger = "0.4.0"
backoff = { version = "0.4.0", features = ["futures", "async-std"]}
backoff-futures = "0.3.2"
