[package]
name = "async02"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = ["attributes", "unstable"] }
argh = "0.1.10"
sha3 = "0.10.7"
color-eyre = "0.6.2"
futures = "0.3.28"
pin-project = "1.0.12"
async-trait = "0.1.68"
futures-timer = "3.0.2"
tracing = "0.1.37"
tracing-futures = "0.2.5"
tracing-tree = "0.2.2"
tracing-subscriber = "0.3.16"
