[package]
name = "waytoodeep"
version = "0.1.0"
edition = "2021"


[dependencies]
futures = "0.3.28"
tokio = { version = "1.27.0", features = ["full"] }
pin-project = "1.0"
color-eyre = "0.6.2"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
reqwest = { version = "0.11.16", default-features = false, features = ["rustls-tls"] }
