[package]
name = "async04"
version = "0.1.0"
edition = "2021"


[dependencies]
futures = "0.3.28"
tokio = { version = "1.27.0", features = ["full"] }
color-eyre = "0.6.2"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tokio-rustls = "0.24.0"
webpki = "0.22.0"
webpki-roots = "0.23.0"
