[package]
name = "http-cc"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing-subscriber = "0.3.16"
color-eyre = "0.6.2"
reqwest = "0.11.16"
tracing = "0.1.37"
futures = "0.3.28"
nom = "7.1.3"

hyper = { version = "0.14.26", features = ["client", "tcp", "http1", "http2", "stream"] }
hyper-rustls = { version = "0.24.0", features = ["http2"] }

rustls-native-certs = "0.6.2"
rustls = "0.21.0"

tokio = { version = "1.27.0", features = ["full"] }
tokio-rustls = "0.24.0"
http = "0.2.9"
h2 = "0.3.18"
enumflags2 = "0.7.7"
byteorder = "1.4.3"
enum-repr = "0.2.6"
bytes = "1.4.0"
hpack = "0.3.0"

[[bin]]
name = "hyp"
path = "bin/hyp.rs"

[[bin]]
name = "sel"
path = "bin/sel.rs"

[[bin]]
name = "req"
path = "bin/req.rs"

[[bin]]
name = "h2h"
path = "bin/h2h.rs"

[[bin]]
name = "h2r"
path = "bin/h2r.rs"

[[bin]]
name = "hh"
path = "bin/hh.rs"

[lib]
name = "hp"
path = "src/lib.rs" 
#crate-type = ["cdylib"]
bench = false
test = false
